--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.1",
     "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
